[package]
name = "rust-gpu-dsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
nohash-hasher = "0.2.0"
once_cell = "1.18.0"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "atomic"
harness = false

[[bench]]
name = "trait_reg"
harness = false

[[bench]]
name = "list"
harness = false
